objects/inov8__PMT_Resource_Allocation__c.object
<CustomObject>
    <description>Stores the allocation of the resource for a requirement</description>
    <fields>
        <fullName>inov8__Allocated_Resource_Id__c</fullName>
        <formula>inov8__Resource_Availability__r.inov8__User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocated Resource Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Apr_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Apr__c</fullName>
        <label>Apr</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Aug_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Aug__c</fullName>
        <label>Aug</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Dec_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Dec__c</fullName>
        <label>Dec</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Feb_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Feb__c</fullName>
        <label>Feb</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Fiscal_Year__c</fullName>
        <formula>inov8__Resource_Availability__r.inov8__Fiscal_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Is_Allocated_to_Me__c</fullName>
        <formula>inov8__Resource_Availability__r.inov8__User__r.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Allocated to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inov8__Jan_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Jan__c</fullName>
        <label>Jan</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Jul_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Jul__c</fullName>
        <label>Jul</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Jun_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Jun__c</fullName>
        <label>Jun</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Mar_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Mar__c</fullName>
        <label>Mar</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__May_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__May__c</fullName>
        <label>May</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Nov_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Nov__c</fullName>
        <label>Nov</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Oct_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Oct__c</fullName>
        <label>Oct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__Program_Name__c</fullName>
        <formula>IF(ISBLANK(inov8__Project__r.inov8__Program_Text__c),&apos;Individual Projects&apos;,inov8__Project__r.inov8__Program_Text__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Project_Name__c</fullName>
        <formula>inov8__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Project_Owner__c</fullName>
        <formula>inov8__Project__r.Owner:User.FirstName + &apos; &apos; +  inov8__Project__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Project__c</fullName>
        <label>Project</label>
        <referenceTo>inov8__PMT_Project__c</referenceTo>
        <relationshipName>Resource_Allocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inov8__Resource_Availability__c</fullName>
        <label>Resource Availability</label>
        <referenceTo>inov8__PMT_Resource_Availability__c</referenceTo>
        <relationshipName>Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inov8__Resource_IsActive__c</fullName>
        <formula>inov8__Resource_Availability__r.inov8__User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inov8__Resource_Name__c</fullName>
        <formula>inov8__Resource_Availability__r.inov8__User__r.FirstName + &quot; &quot; + inov8__Resource_Availability__r.inov8__User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Role__c</fullName>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inov8__PMT_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__Sep_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inov8__Sep__c</fullName>
        <label>Sep</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inov8__UserId__c</fullName>
        <formula>inov8__Resource_Availability__r.inov8__User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__User_Department__c</fullName>
        <description>Shows Users department name</description>
        <formula>inov8__Resource_Availability__r.inov8__User__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__User_Name__c</fullName>
        <formula>inov8__Resource_Availability__r.inov8__User_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <label>PMT Resource Allocation</label>
    <listViews>
        <fullName>inov8__My_allocated_projects</fullName>
        <columns>inov8__Project__c</columns>
        <columns>inov8__Program_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inov8__Is_Allocated_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My allocated projects</label>
    </listViews>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Resource Allocation No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMT Resource Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>inov8__Hours_Cant_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>inov8__Jan_Hours__c &lt; 0 ||
inov8__Feb_Hours__c &lt; 0 ||
inov8__Mar_Hours__c &lt; 0 ||
inov8__Apr_Hours__c &lt; 0 ||
inov8__May_Hours__c &lt; 0 ||
inov8__Jun_Hours__c &lt; 0 ||
inov8__Jul_Hours__c &lt; 0 ||
inov8__Aug_Hours__c &lt; 0 ||
inov8__Sep_Hours__c &lt; 0 ||
inov8__Oct_Hours__c &lt; 0 ||
inov8__Nov_Hours__c &lt; 0 ||
inov8__Dec_Hours__c &lt; 0</errorConditionFormula>
        <errorMessage>Actual hours worked cannot be negative numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inov8__Self_update_hours</fullName>
        <active>true</active>
        <errorConditionFormula>$User.Id!= inov8__Resource_Availability__r.inov8__User__c  &amp;&amp;
 (ISCHANGED(  inov8__Jan_Hours__c ) || ISCHANGED( inov8__Feb_Hours__c) || ISCHANGED( inov8__Mar_Hours__c) || ISCHANGED( inov8__Apr_Hours__c ) || ISCHANGED( inov8__May_Hours__c) || ISCHANGED( inov8__Jun_Hours__c) || ISCHANGED( inov8__Jul_Hours__c) || ISCHANGED( inov8__Aug_Hours__c) || ISCHANGED( inov8__Sep_Hours__c) || ISCHANGED( inov8__Oct_Hours__c) || ISCHANGED( inov8__Nov_Hours__c) || ISCHANGED( inov8__Dec_Hours__c))</errorConditionFormula>
        <errorMessage>Hours can only be self updated</errorMessage>
    </validationRules>
</CustomObject>